--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,8 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.ServiceDemo" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/grey2</item>
+        <item name="colorPrimaryVariant">@color/grey1</item>
     </style>
 
     <style name="Theme.ServiceDemo" parent="Base.Theme.ServiceDemo" />
